# ICOARPlatform

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Home.py  Home_backup_20251021_130924.py  PreviousIcoaragent.py  README.md  config.yaml  icoar_agent.backup.py  icoar_agent.py  login.py  login_error.html  menu.py  py310.yml  pyproject.toml  requirements.txt  sample.py  smoke_collect.py  style.css
.github/workflows/: aws-ecr.yml  pre-commit.yml
.streamlit/: authenticator.yaml
ICOAR_core/: rasa_integration.py
ICOAR_core/data_collection/: __init__.py  runner.py  utils.py
ICOAR_core/data_collection/facebook/: __init__.py  scraper.py
ICOAR_core/data_collection/huggingface/: __init__.py  api.py  demo.py
ICOAR_core/data_collection/kaggle_/: __init__.py  api.py
ICOAR_core/data_collection/reddit/: scraper.py
ICOAR_core/data_collection/tiktok/: __init__.py  api.py  scraper.py
ICOAR_core/data_collection/twitter/: api.py  scraper.py  utils.py
ICOAR_core/data_collection/youtube/: __init__.py  comments.py  youtube_data_api_videos.py
ICOAR_core/validation/: validation_package.py
citations/: package-lock.json  package.json
citations/src/: Citations.tsx  index.tsx
common/: css.py
common/meme/: classification.py  utility.py
corousel/: package-lock.json  package.json
corousel/src/: Corousel.tsx  index.tsx
data_collection/: __init__.py  reddit.py  twitter.py  utils.py
data_collection/facebook/: __init__.py  scraper.py
data_collection/reddit/: __init__.py  scraper.py
data_collection/tiktok/: __init__.py  api.py  scraper.py  tiktok_api.py  tiktok_scraper.py
data_collection/twitter/: __init__.py  api.py  scraper.py  twitter_api.py  twitter_scraper.py  utils.py
data_collection/youtube/: __init__.py  comments.py  video_comments.py
data_preprocessing/: __init__.py
docs/: conf.py  data_collection.facebook.rst  data_collection.reddit.rst  data_collection.rst  data_collection.tiktok.rst  data_collection.twitter.rst  data_collection.youtube.rst  data_preprocessing.rst  gpt.rst  index.rst  modules.rst
emotional_analysis/: __init__.py
experiments/: tiktok_offensive_collection.py
experiments/reddit_privacy_label/: collect.py
frontend/: package-lock.json
frontend/src/: DiscreteSlider.tsx
gpt/: agent_collect.py  components.py  image_labeling.py  image_sample_set.py  layout.py  prompts.py  utils.py
gpt/docs/: usage.md
gpt/examples/: text_classification.json
gpt/storages/: entity.py  stepper.py
header_tab/: package.json
header_tab/src/: DiscreteSlider.tsx
header_tab2/: package-lock.json  package.json
header_tab2/src/: DiscreteSlider.tsx
header_tab3/src/: DiscreteSlider.tsx
model/: config.json
model/df/: classifiers.py  pipeline.py
pages/: 1_Data_Collection.py  2_Data_Preprocessing.py  3_Feature_Engineering.py  4_Training.py  5_Validation.py  6_Visualisation.py  7_Image_Classification.py  7_Text_Annotation.py  7_Text_annotaion.py  8_Emotion_Analysis.py  9_Meme_Classification.py  data_analysis.py
rasa_project/: config.yml  domain.yml  domain.yml.bak  domain.yml.before_sanitize
rasa_project/.rasa/cache/: cache.db
rasa_project/.rasa/cache/tmp1gaeonjs/: vocabularies.json
rasa_project/.rasa/cache/tmp3yyrz_9u/: DIETClassifier.data_example.st  DIETClassifier.data_example_metadata.json  DIETClassifier.entity_tag_specs.json  DIETClassifier.index_label_id_mapping.json  DIETClassifier.label_data.st  DIETClassifier.label_data_metadata.json  DIETClassifier.sparse_feature_sizes.json  DIETClassifier.tf_model.index
rasa_project/.rasa/cache/tmp6_ewjnhw/: ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
rasa_project/.rasa/cache/tmp97y34o9m/: DIETClassifier.data_example.st  DIETClassifier.data_example_metadata.json  DIETClassifier.index_label_id_mapping.json  DIETClassifier.sparse_feature_sizes.json  DIETClassifier.tf_model.index
rasa_project/.rasa/cache/tmp_6oi00yh/: vocabularies.json
rasa_project/.rasa/cache/tmpcip3_ld4/: featurizer.json  ted_policy.data_example_metadata.json  ted_policy.fake_features_metadata.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
rasa_project/.rasa/cache/tmpdvw69ale/: featurizer.json  ted_policy.data_example_metadata.json  ted_policy.fake_features_metadata.json  ted_policy.meta.json  (+2 more)
rasa_project/actions/: __init__.py  __init__.py.save  actions.py  requirements.txt
spark_models/: __init__.py  cyberbullying.py
tabs/: Prompt_Engineering.py  __init__.py  home_page.py  login.py  text_classification.py
tabs/CommonRasa/: rasa_ui.py
tabs/Data_Collection/: data_collection_tab.py  data_preprocessing_tab.py  data_upload.py  query_builder.py
tabs/RasaAssistant/: assistant_tab.py
tabs/Text_Annotation/: In_context_leanring.py  Text_annotation.py
tabs/Visualisation/: Text_Visualisation.py  __init__.py
tabs/image/: bully_classifification.py  deepfake_detection.py  find_images.py  huggingface_image_analysis.py  meme_classification.py
tabs/validation/: validation.py
tests/: test_data_collection.py
visualization/: __init__.py  visualizer.py
(+10 files in other folders)
