[tool.poetry]
name = "icoar"
version = "0.1.0"
description = ""
authors = ["Tsu-Yao Chang <tsuyaoc@clemson.edu>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "^1.20.0"
tweepy = { extras = ["async"], version = "^4.13.0" }
fasttext-wheel = "^0.9.2"
tweet-preprocessor = "^0.6.0"
transformers = "^4.27.4"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
emoji = "^2.2.0"
setuptools = "^60.8.2"
wheel = "^0.37.1"
spacy = "^3.5.3"
spacy-transformers = "^1.0.6"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz" }
huggingface-hub = "^0.14.1"
matplotlib = "^3.7.1"
gensim = "^4.3.1"
seaborn = "^0.12.2"
networkx = "^3.1"
praw = "^7.7.0"
langchain = "^0.0.231"
openai = "^0.27.8"
plotly = "^5.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
watchdog = "^3.0.0"
ruff = "^0.0.265"
pre-commit = "^3.3.1"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [".git"]
