[tool.poetry]
name = "icoar"
version = "0.1.0"
description = ""
authors = ["Tsu-Yao Chang <tsuyaoc@clemson.edu>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.20.0"
tweepy = { extras = ["async"], version = "^4.13.0" }
fasttext-wheel = "^0.9.2"
tweet-preprocessor = "^0.6.0"
transformers = "^4.27.4"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
emoji = "^2.2.0"
setuptools = "^60.8.2"
wheel = "^0.37.1"
spacy = "^3.5.3"
spacy-transformers = "^1.0.6"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz" }
huggingface-hub = "^0.14.1"
matplotlib = "^3.7.1"
gensim = "^4.3.1"
seaborn = "^0.12.2"
networkx = "^3.1"
praw = "^7.7.0"
snscrape = {git = "https://github.com/JustAnotherArchivist/snscrape.git"}
twscrape = "^0.4.2"
playwright = "1.30.0"
nltk = "^3.8.1"
pyldavis = "^3.4.1"
# tiktokapipy = "^0.2.0.post2"
facebook-scraper = {git = "https://github.com/seabnavin19/facebook-scraper.git", branch="fix/get_post_by_search"}
langchain = "^0.0.231"
openai = "^0.27.8"
plotly = "^5.15.0"
tensorflow = "^2.13.0"
tensorflow-io-gcs-filesystem = "0.31.0"
scikit-image = "^0.21.0"
wordcloud = "^1.9.2"
selenium = "^4.11.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
watchdog = "^3.0.0"
ruff = "^0.0.265"
pre-commit = "^3.3.1"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [".git"]
